blockml/test/errors/02_field/e268/e268.view
view: e268
table: 1
fields:
- dimension: dim1
  result: string
  format_number: '$'
  sql: abc


